# config

./: .dmypy.json  .gitignore  Brewfile  Brewfile.lock.json  README.md  backups_public.pem  config.toml  git-config  git-ignore  localhost.restic.plist  run.sh  run2.sh
.duplicacy/: preferences
.github/: dependabot.yml
Alfred/Scripts/: emoji_list.py  pyproject.toml  yubikey-filter.py
Duplicacy/: README.md  patterns
Ghostty/: config
Hammerspoon/: init.lua
Mise/: config.toml
NeoVim/: init.vim
Nova/: .gitignore  Behaviors.json  Projects.plist  UserConfiguration.json  WorkspaceLayouts.json
Setup/: 00-essentials.sh  00-homebrew.sh  01-make-links.py  01-setup-asdf-python.sh  02-defaults.sh  02-make-links.py  03-setup-xonsh.sh  04-install-poetry.sh  05-defaults.sh  06-install-rust.sh  50-brew-bundle.sh  51-install-rust.sh
WezTerm/: wezterm.lua
Yarn Global/: package.json
Zsh/: env.sh  rc.sh
asdf/: global-versions
configsync/: configsync.py  pyproject.toml
configsync/configsync/: __init__.py  homebrew.py  python.py  rust.py
fish/: .gitignore  config.fish  fish_variables
fish-config/: config.fish  fish_variables
git/: 050-pre-commit.py  attributes  config  config-octopus  ignore  message
iterm2-config/: com.googlecode.iterm2.plist  nova-open-helper
launch-agents/: au.net.leigh.backup-server.plist  au.net.leigh.personal.backup-mirror.plist  party.leigh.personal.autonoodle.plist  (+2 more)
xonsh/: .envrc  _sitecustomize.py  pyproject.toml  rc.xsh
xonsh/leigh/: npm.xsh  prompt.xsh
xonsh/leigh/prompt/: git.py  git_subprocess.py  git_watchman.py
(+192 files in other folders)
