[tool.poetry]
name = "configsync"
version = "0.1.0"
description = ""
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]

[tool.poetry.dependencies]
python = "^3.7"
tomlkit = "^0.11.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
configsync = 'configsync:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
