[tool.poetry]
name = "leigh"
version = "0.1.0"
description = ""
authors = ["Leigh Brenecki <l@leigh.net.au>"]

[tool.poetry.dependencies]
python = "^3.8"
readchar = "^2.0.1"
rich = "^7.0.0"
watchdog = "^0.10.3"
pywatchman = "^1.4.1"
pygit2 = "^1.4.0"
trio = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"