[tool.poetry]
name = "alfred-scripts"
version = "0.1.0"
description = ""
authors = ["Leigh Brenecki <l@leigh.net.au>"]

[tool.poetry.dependencies]
python = "^3.9"
emoji-data = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
